--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -41,7 +41,8 @@ inmersos en un proceso de mejora continua.</p>
 <!--Brief Introduction-->
 
 <section class="intro">
-    <h1> Sobre Nosotros </h1>
+    <ul>
+    <li><a href="">SOBRE NOSOTROS</a></li>
     <p1>Somos una empresa constructora 100% Boliviana, con amplia experiencia en el campo de la
         construcción e ingeniería, viendo de esta manera el nacimiento de una empresa unificada,
         dedicada a la Industria de la construcción e ingeniería , iniciando nuestros proyectos desde
@@ -49,15 +50,13 @@ inmersos en un proceso de mejora continua.</p>
         para la correcta construcción del proyecto, contando con diseños y proyectos arquitectónicos
         innovadores siempre a la vanguardia.</p1>
 <!--I dont know what to put here-->
+<ul>
+<li><a href="">NUESTROS SERVICIOS</a></li>
+</ul>
         <div class="row">
             <div class="more-info">
-                <h3>Construcción</h3>
-                <p1>Somos una empresa constructora 100% Boliviana, con amplia experiencia en el campo de la
-                    construcción e ingeniería, viendo de esta manera el nacimiento de una empresa unificada,
-                    dedicada a la Industria de la construcción e ingeniería , iniciando nuestros proyectos desde
-                    la selección de las mejores ubicaciones, cumpliendo con todos los estándares necesarios
-                    para la correcta construcción del proyecto, contando con diseños y proyectos arquitectónicos
-                    innovadores siempre a la vanguardia.</p1>
+                <h3>Construcción de Planchadas</h3>
+                <p1>Consiste en realizar la estructura o plataforma de soporte donde se instalará la torre de perforación.</p1>
             </div>
             <div class="more-info">
                 <h3>Ingeniería</h3>
@@ -74,12 +73,22 @@ inmersos en un proceso de mejora continua.</p>
                     construcción e ingeniería, viendo de esta manera el nacimiento de una empresa unificada,
                     dedicada.</p1>
             </div>
+            <div class="more-info">
+                <h3>Example 3</h3>
+                <p1>Somos una empresa constructora 100% Boliviana, con amplia experiencia en el campo de la
+                    construcción e ingeniería, viendo de esta manera el nacimiento de una empresa unificada,
+                    dedicada.</p1>
+            </div>
         </div>
+    </ul>
 </section>
 <!--Pictures of Enerpetrol-->
 <!--BUG: pictures dont fit , might make it a slideshow-->
 <section class = "pictures">
-    <h1> Conozca a nuestro equipo</h1>
+    <ul>
+        <li><a href="">CONOZCA A NUESTRO EQUIPO</a></li>
+
+    </ul>
     <!-- BUG: RESIZE IMAGE TO MAKE IT LOOK PROPER -->
     <div>
         <div>
@@ -92,11 +101,18 @@ inmersos en un proceso de mejora continua.</p>
 
 <!--Clients // NUESTROS CLIENTES-->
 <section class="clients">
-    <h1>Nuestro Clientes</h1>
+    <ul>
+        <li><a href="">NUESTRO CLIENTES</a></li>
+    </ul>
 
     <div class = "row">
         <div class = "clients-col">
             <img scr ="clientes/part1.png">
+            <img scr ="clientes/part2.png">
+            <img scr ="clientes/part3.png">
+            <img scr ="clientes/part4.png">
+            <img scr ="clientes/part5.png">
+            
             <h3>BUSCA LA MEJOR EMPRESA DE SERVICIOS  PETROLEROS EN BOLIVIA?</h3>
             <a href=""class="hero-btn-2">Contact Us</a>
         </div>
