--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -86,10 +86,10 @@ inmersos en un proceso de mejora continua.</p>
     <div class = "row">
         <div class = "clients">
             <img src ="clientes/part1.png">
-            <img src ="clientes/part2.jpg">
-            <img src ="clientes/part3.jpg">
-            <img src ="clientes/part4.jpg">
-            <img src ="clientes/part5.jpg">
+            <img src ="clientes/part2.png">
+            <img src ="clientes/part3.png">
+            <img src ="clientes/part4.png">
+            <img src ="clientes/part5.png">
             
             <h3>BUSCA LA MEJOR EMPRESA DE SERVICIOS  PETROLEROS EN BOLIVIA?</h3>
             <a href=""class="hero-btn-2">Contact Us</a>
