--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -141,7 +141,7 @@ inmersos en un proceso de mejora continua.</p>
 
 				<div>
 					<i class="fa fa-phone"></i>
-					<p>+4406942 - 68486432</p>
+                    <p><a href="tel:+4406942 - 68486432">+4406942 - 68486432</a></p>
 				</div>
 
 				<div>
