--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -136,8 +136,9 @@ inmersos en un proceso de mejora continua.</p>
 
 				<div>
 					<i class="fa fa-map-marker"></i>
-					<p><span>Av Peru frente calle Nueva Catilla Edif. Rozangel #555 Of. 1</span> Solana Beach, California</p>
+                    <p></p><a href="https://www.google.com/maps/place/ENERPETROL/@-17.3895765,-66.1726598,17z/data=!3m1!4b1!4m5!3m4!1s0x93e3754c45269c3f:0xf1052f116f593fcd!8m2!3d-17.3895816!4d-66.1704655">Av Peru frente calle Nueva Catilla Edif. Rozangel #555 Of. 1</a></p>
 				</div>
+
 
 				<div>
 					<i class="fa fa-phone"></i>
