Fixes and changes
-centerd nav bar and links
-added logo in nav bar (need to center it)
-added logo to footer though too large and mostly out of view
-changed main background photo
-untested fix for closing menu

--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -173,7 +173,7 @@ inmersos en un proceso de mejora continua.</p>
             navLinks.style.right = "0";
         }
         function hideMenu(){
-            navLinks.style.right = "200";
+            navLinks.style.right = "-200px"; /*FIX?: changed 200 to -200px. Dont know how to test this*/
         }
 
     </script>
