--- a/Enerpetrol1/contact.html
+++ b/Enerpetrol1/contact.html
@@ -4,7 +4,7 @@
   	<title>Contact Form</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="contact/style.css">
 	</head>
 	<body>
 	<section class="ftco-section">
