--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -25,7 +25,7 @@
                     <li><a href="">QUIENES SOMOS</a></li>
                     <li><a href="">SERVICIOS</a></li>
                     <li><a href="">PROYECTOS</a></li>
-                    <li><a href="">CONTACTANOS</a></li>
+                    <li><a href="contact.html">CONTACTANOS</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -103,7 +103,7 @@ inmersos en un proceso de mejora continua.</p>
     
             
             <h3>BUSCA LA MEJOR EMPRESA DE SERVICIOS  PETROLEROS EN BOLIVIA?</h3>
-            <a href=""class="hero-btn-2">Contact Us</a>
+            <a href="contact.html"class="hero-btn-2">Contact Us</a>
         </div>
     </div>
 </section>
