--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -21,8 +21,8 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li class="company-logo"><a href="index.html"><img src = "images/logo.png" alt></a> </li>
-                    <li><a href="">INICIO</a></li>
-                    <li><a href="">QUIENES SOMOS</a></li>
+                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="about.html">QUIENES SOMOS</a></li>
                     <li><a href="">SERVICIOS</a></li>
                     <li><a href="">PROYECTOS</a></li>
                     <li><a href="contact.html">CONTACTANOS</a></li>
