--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -185,7 +185,7 @@ inmersos en un proceso de mejora continua.</p>
             navLinks.style.right = "0";
         }
         function hideMenu(){
-            navLinks.style.right = "200";
+            navLinks.style.right = "-200px";
         }
 
     </script>
