--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -161,8 +161,9 @@ inmersos en un proceso de mejora continua.</p>
 
 				<div class="footer-icons">
 
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-whatsapp"></i></a>
+					<a href="https://www.facebook.com/ENERPETROLing"><i class="fa fa-facebook"></i></a>
+                   			<a href="https://wa.me/<440694268486432>"><i class="fa fa-whatsapp"></i></a>
+                 		        <a href="https://www.instagram.com/enerpetrol.bo/"><i class="fa fa-instagram"></i></a>
 
 				</div>
 
