--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -102,8 +102,12 @@ inmersos en un proceso de mejora continua.</p>
     </ul>
     
             
-            <h3>BUSCA LA MEJOR EMPRESA DE SERVICIOS  PETROLEROS EN BOLIVIA?</h3>
-            <a href="contact.html"class="hero-btn-2">Contactanos</a>
+           <div class="social">
+        <a href="https://www.facebook.com/ENERPETROLing"><i class="fa fa-facebook"></i></a>
+        <a href="https://wa.me/<440694268486432>"><i class="fa fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/enerpetrol.bo/"><i class="fa fa-instagram"></i></a>
+
+    </div>
         </div>
     </div>
 </section>
