--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -155,7 +155,7 @@ en ENERPETROL es nuestro mayor Activo, ya que es el motor que mueve nuestra empr
 <!--Clients // NUESTROS CLIENTES-->
     <div class="clients mb-4">
             <div class="col-md-12 text-center">
-                <h2 class="mb-4">CONOCE ENERPETROL</h2>
+                <h2 class="mb-4">NUESTROS CLIENTES</h2>
                 <span class="title-border"></span>
 
 
