--- a/Enerpetrol1/contact.html
+++ b/Enerpetrol1/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Contact Us Page</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" href="https://pro.fontawesome.com/release/v5.10.0/css/all/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
