--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -191,6 +191,8 @@ en ENERPETROL es nuestro mayor Activo, ya que es el motor que mueve nuestra empr
 <footer class="footer-distributed">
 
 			<div class="footer-left">
+		  <div class="logo"><a href="index.html"><img src = "images/logo01.png" alt></a></div>
+
 
 
 				<p class="footer-links">
