--- a/Enerpetrol1/projectlink2.html
+++ b/Enerpetrol1/projectlink2.html
@@ -40,8 +40,8 @@
             <div class="row">
                 <div class="col">
                    <div class="text-box">
-                       <h5>Nuestros Proyectos</h5>
-                       <h1>Instalación Industrial para Empresa</hl>
+                       <h1>Nuestros Proyectos</h1>
+                       <h2>Instalación Industrial para Empresa</h2>
                         <div class="paragraph">
                         <p>
                             Aquí es donde agregamos la razón específica del proyecto. 
