--- a/Enerpetrol1/about.html
+++ b/Enerpetrol1/about.html
@@ -51,8 +51,8 @@
                     <div class="social">
                         <a href="https://www.facebook.com/ENERPETROLing"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/enerpetrol.bo/"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-whatsapp"></i></a>
-
+                        <a href="https://api.whatsapp.com/"><i class="fa fa-whatsapp"></i></a>
+    
                     </div>
                 </div>
             </div>
