--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -222,7 +222,7 @@ en ENERPETROL es nuestro mayor Activo, ya que es el motor que mueve nuestra empr
         <div class="footer-icons">
 
             <a href="https://www.facebook.com/ENERPETROLing"><i class="fa fa-facebook"></i></a>
-            <a href="https://wa.me/440694268486432>"><i class="fa fa-whatsapp"></i></a>
+            <a href="https://api.whatsapp.com/"><i class="fa fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/enerpetrol.bo/"><i class="fa fa-instagram"></i></a>
 
 
