--- a/Enerpetrol1/projectlink1.html
+++ b/Enerpetrol1/projectlink1.html
@@ -163,7 +163,7 @@
         <div class="footer-icons">
 
             <a href="https://www.facebook.com/ENERPETROLing"><i class="fa fa-facebook"></i></a>
-            <a href="https://wa.me/440694268486432>"><i class="fa fa-whatsapp"></i></a>
+            <a href="https://api.whatsapp.com/"><i class="fa fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/enerpetrol.bo/"><i class="fa fa-instagram"></i></a>
 
 
