--- a/Enerpetrol1/Servicos.html
+++ b/Enerpetrol1/Servicos.html
@@ -15,7 +15,7 @@
             
 
         <nav class="nav-links">
-            <div class="logo"><a href="index.html"><img src = "images/logo01.png" alt></a></div>
+                <div class="logo"><a href="index.html"><img src = "images/logo01.png" alt="" class="image-logo"></a></div>
                 <a href="#" class="toggle-btn">
                     <span class = "bar"></span>
                     <span class = "bar"></span>
