--- a/Enerpetrol1/Servicos2.html
+++ b/Enerpetrol1/Servicos2.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Servicos2</title>
+	<link rel="stylesheet" href="https://pro.fontawesome.com/release/v5.10.0/css/all/css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link rel="stylesheet" type="text/css" href="servicosstyle.css">
  <link rel="stylesheet" type="text/css" href="servicosstyle.css">
 
 </head>
