--- a/Enerpetrol1/index.html
+++ b/Enerpetrol1/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/332a215f17.js" cross origin="anonymous"></script>
 </head>
     <body>
-<!--Header section updated 4/16/2022-->     
+<!--Header section updated-->     
         
         <section class="header">
             
@@ -79,7 +79,7 @@ inmersos en un proceso de mejora continua.</p>
         </div>
     </div>
 </section>
-<!--End of About Section UPDATED 3/30/2021-->
+<!--End of About Section-->
 
 <!---Projects----->
 <section class="projects py-3">
@@ -149,7 +149,7 @@ en ENERPETROL es nuestro mayor Activo, ya que es el motor que mueve nuestra empr
         </div>
     </div>
 </section>
-<!--UPDATED 3/31/2022 PROJECTS -->
+<!--UPDATED PROJECTS -->
 
 <!--Clients // NUESTROS CLIENTES-->
     <div class="clients mb-4">
