--- a/Enerpetrol1/contact.html
+++ b/Enerpetrol1/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
+  <title>Contactanos</title>
   <link rel="stylesheet" href="https://pro.fontawesome.com/release/v5.10.0/css/all/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,20 +34,20 @@
       </nav>
    <div class="contactus">
     <div class="title">
-      <h2>Contact Us</h2>
+      <h2>Contactanos</h2>
     </div>
     <div class="box">
       <div class="contact form">
-        <h3>Send a Message</h3>
+        <h3>Enviar un mensaje</h3>
         <form>
           <div class="formBx">
             <div class="row50">
               <div class="inputBox">
-                <span>First Name</span>
+                <span>El primer nombre</span>
                 <input type="text" placeholder="">
               </div>
               <div class="inputBox">
-                <span>Last Name</span>
+                <span>El apellido</span>
                 <input type="text" placeholder="">
               </div>
             </div>
@@ -57,19 +57,19 @@
                 <input type="text"  placeholder="">
               </div>
               <div class="inputBox">
-                <span>Mobile</span>
+                <span>El número telefónico</span>
                 <input type="text"  placeholder="">
               </div>
             </div>
             <div class="row100">
               <div class="inputBox">
-                <span>Message</span>
-                <textarea placeholder="Write your message.."></textarea>
+                <span>Mensaje</span>
+                <textarea placeholder="Escribe tu mensaje.."></textarea>
               </div>
             </div>
             <div class="row100">
               <div class="inputBox">
-                <input type="submit" value="Send">
+                <input type="submit" value="Envía">
               </div>
             </div>
           </div>
