--- a/Servicos.html
+++ b/Servicos.html
@@ -71,7 +71,7 @@
 				
         
 <div class="button">
-            <a href="Servicos2.html">SERVCIOS DE INGENIERIA</a>
+            <a href="Servicos2.html">SERVICIOS DE INGENIERIA</a>
           </div>
                         </div>
                     </div>
